--- a/qdrant-landing/themes/qdrant/static/css/blocks/_buttons.scss
+++ b/qdrant-landing/themes/qdrant/static/css/blocks/_buttons.scss
@@ -16,7 +16,6 @@
       width: calc(100% - 20px);
       margin: lib.rem(10) lib.rem(10) lib.rem(5);
     }
-  ;
 
     &:before {
       width: 100%;
@@ -336,6 +335,7 @@
     -webkit-transform-origin: top right;
     transform-origin: top right;
     background-color: var(--brand-primary);
+    color: white;
   }
 
   &:hover::before {
@@ -374,6 +374,10 @@
 
   &_border {
     box-shadow: inset 0 0 0 2px var(--brand-primary);
+
+    &:focus {
+      box-shadow: inset 0 0 0 2px var(--brand-primary);
+    }
 
     &.btn-style-four_reversed {
       box-shadow: inset 0 0 0 2px var(--brand-primary);
