--- a/qdrant-landing/themes/qdrant/layouts/partials/docs_sidebar.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/docs_sidebar.html
@@ -2,7 +2,7 @@
 <nav class="col-lg-3 col-md-3 col-12 mt-0 mt-md-4 position-relative">
     <div id="accordion" class="sticky-top">
         <!-- Button trigger modal -->
-        <button type="button" class="qdr-search-input-btn" data-target="#searchModal">
+        <button type="button" class="qdr-search-input-btn mb-2" data-target="#searchModal">
             <i class="fa fa-search mr-2"></i>Search...
         </button>
         {{ range where .Site.RegularPages "Section" .Section }}
