--- a/qdrant-landing/themes/qdrant/layouts/partials/footer.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/footer.html
@@ -29,7 +29,7 @@
                                 {{ else }}
                                 <i class="fas fa-check-circle"></i>
                                 {{ end }}
-                                {{ .Name }}
+                                <span>{{ .Name }}</span>
                             </a></li>
                             {{ end }}
                         </ul>
