changed common auto-container width, article font-size, made some fixes

--- a/qdrant-landing/themes/qdrant/layouts/index.html
+++ b/qdrant-landing/themes/qdrant/layouts/index.html
@@ -31,24 +31,6 @@ docker run -p 6333:6333 qdrant/qdrant</code>
                   <span class="text">Demos</span>
                 </a>
 
-              <!-- <h4 class="font-weight-bold mt-3 mb-0">It's Free and <a class="os-link" target="_blank" href="{{ .Site.Params.github }}">Open Source </a></h4> -->
-
-              <!-- Installation Section -->
-              <!-- <section class="installation-section">
-                <p>Get started by downloading a pre-build Docker Image - it is only 35Mb!</p>
-                <div class="code">
-                  <code id="copy-code">docker pull qdrant/qdrant</code>
-                  <span class="d-inline-block" id="copy-popover" data-toggle="popover" data-content="Text copied!">
-                    <button class="copy-btn lead ml-2" data-clipboard-target="#copy-code" title="Copy code">
-                      <i class="flaticon-copy"></i>
-                    </button>
-                  </span>
-                </div>
-                <p>Take a look at our <a target="_blank" href="{{ .Site.Params.quick_start }}">Quick Start Guide</a>
-                  or build your own neural search <br> with our step-by-step <a target="_blank" href="{{ .Site.Params.tutorial }}">Tutorial</a></p>
-              </section> -->
-              <!--End Installation Section-->
-
             </div>
           </div>
 
@@ -137,6 +119,7 @@ docker run -p 6333:6333 qdrant/qdrant</code>
                "autoplay": true,
                "interval": 3000,
                "pauseOnHover": true,
+               "pauseOnFocus": false,
                "arrows":  false,
                "paginationDirection": "ttb",
                "classes": {
