--- a/qdrant-landing/themes/qdrant/layouts/partials/steps-form.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/steps-form.html
@@ -73,7 +73,7 @@
                                 You must accept the terms and conditions
                             </div>
                         </div>
-                        <button type="submit" class="btn btn-style-four btn-style-four_reversed
+                        <button type="submit" class="align-self-start btn btn-style-four btn-style-four_reversed
                                              btn-style-four_big btn-style-four_border mt-4">
                             <span class="text">Submit</span>
                         </button>
@@ -84,12 +84,12 @@
         <div class="splide__arrows steps-form__arrows">
             <div>
             <button class="splide__arrow splide__arrow--prev btn btn-style-four btn-style-four_small btn-style-four_border" type="button">
-                Prev
+                <span class="text">Prev</span>
             </button>
             </div>
             <div>
             <button class="splide__arrow splide__arrow--next btn btn-style-four btn-style-four_small btn-style-four_border" type="button">
-                Next
+                <span class="text">Next</span>
             </button>
             </div>
         </div>
