--- a/qdrant-landing/themes/qdrant/layouts/benchmarks/list.html
+++ b/qdrant-landing/themes/qdrant/layouts/benchmarks/list.html
@@ -15,7 +15,7 @@
 
 
             {{ if .Description }}
-            <article class="article">
+            <article class="article article_narrow">
                 <h1>{{ .Title }}</h1>
                 <p>{{ .Description }}</p>
             </article>
@@ -33,7 +33,7 @@
             {{ end }}
 
 
-            <article class="article">
+            <article class="article article_narrow">
                 {{ .Content }}
             </article>
         </section>
