--- a/qdrant-landing/themes/qdrant/layouts/articles/single.html
+++ b/qdrant-landing/themes/qdrant/layouts/articles/single.html
@@ -4,7 +4,7 @@
         <!-- Content Side -->
         <section class="col-lg-12 col-md-12 col-sm-12">
             {{ .Scratch.Set "scope" "single" }}
-            <article class="article article_bb mb-4">
+            <article class="article article_narrow article_bb mb-4">
                 <div class="article__cover mt-lg-5 mb-4">
                     <img src="{{ .Params.preview_image }}">
                 </div>
