re-imported blog styles, because they are used in other places

--- a/qdrant-landing/themes/qdrant/static/css/main.scss
+++ b/qdrant-landing/themes/qdrant/static/css/main.scss
@@ -175,6 +175,7 @@ code {
 @import "blocks/steps-form";
 @import "blocks/documentation";
 @import "blocks/article";
+@import "blocks/blog";
 @import "blocks/article-card";
 @import "blocks/breadcrumbs";
 @import "blocks/share-post";
