optimized css loading

--- a/qdrant-landing/themes/qdrant/static/css/_responsive.scss
+++ b/qdrant-landing/themes/qdrant/static/css/_responsive.scss
@@ -1,6 +1,6 @@
 /* Entropy HTML Template*/
 
-@import url('colors.css');
+@import url('_colors.scss');
 
 @media only screen and (max-width: 2240px) {
 
